<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="5dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageKos"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/nameKos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_kosName"
            android:textSize="20sp"
            android:fontFamily="@font/notosans_bold"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageKos"/>

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_circle_primary"
            android:fontFamily="@font/notosans_semibold"
            android:padding="10dp"
            android:text="@string/txt_distance"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageKos"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/categoryKos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_stroke"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:text="@string/txt_categorykos"
            android:textSize="12sp"
            android:fontFamily="@font/notosans_semibold"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageKos"/>

        <TextView
            android:id="@+id/addressKos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/notosans_medium"
            android:maxLines="1"
            android:text="@string/txt_addressName"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/categoryKos"
            app:layout_constraintTop_toTopOf="@+id/categoryKos" />

        <TextView
            android:id="@+id/descriptionKos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/txt_descriptionKos"
            android:textSize="12sp"
            android:maxLines="3"
            android:fontFamily="@font/notosans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryKos"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/priceKos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/txt_priceKos"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/categoryKos"
            app:layout_constraintTop_toBottomOf="@id/descriptionKos" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_perMonth"
            android:textSize="10sp"
            android:fontFamily="@font/notosans_regular"
            app:layout_constraintBottom_toBottomOf="@+id/priceKos"
            app:layout_constraintStart_toEndOf="@+id/priceKos"
            app:layout_constraintTop_toTopOf="@+id/priceKos" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>