<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.activity.auth.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/vektor_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree_semibold"
            android:text="@string/txt_loginpage_heading1"
            android:textColor="@color/primary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/figtree_regular"
            android:text="@string/txt_loginpage_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.myskripsi.gokos.ui.customview.CustomEmailEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_transparent_with_stroke"
            android:drawableStart="@drawable/ic_email_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/figtree_light"
            android:textSize="14sp"
            android:hint="@string/txt_loginpage_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.myskripsi.gokos.ui.customview.CustomPasswordEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_transparent_with_stroke"
            android:drawableStart="@drawable/ic_password_24"
            android:drawableEnd="@drawable/ic_eye_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/figtree_light"
            android:textSize="14sp"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/primary"
            android:text="@string/txt_loginpage_btn_login"
            android:fontFamily="@font/figtree_semibold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_loginpage_dont_have_account"
                android:fontFamily="@font/figtree_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/goRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/figtree_semibold"
                android:textColor="@color/primary"
                android:text="@string/txt_loginpage_signup"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout1">

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:layout_marginTop="2dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/txt_loginpage_info"
                android:textSize="12sp" />

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_marginTop="2dp"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_button"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout2">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="25dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_google" />

            <Button
                android:id="@+id/btnGoogleLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_transparent"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/figtree_semibold"
                android:gravity="start|center"
                android:text="@string/txt_loginpage_btn_info_login_google"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        app:lottie_rawRes="@raw/loadinganimation"/>

</androidx.constraintlayout.widget.ConstraintLayout>